--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,15 @@ repositories {
 
 dependencies {
     compile('org.openrdf.sesame:sesame-repository-api:2.8.3')
-    //compile('com.marklogic:java-client-api:4.0-SNAPSHOT') {
-    //    exclude(group: 'org.slf4j')
-    //    exclude(group: 'ch.qos.logback')
-    //}
+    compile('com.marklogic:client-java-api:3.0-SNAPSHOT') {
+        exclude(group: 'org.slf4j')
+        exclude(group: 'ch.qos.logback')
+    }
 
     testCompile 'com.jayway.restassured:rest-assured:2.4.1'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit:junit:4.12'
+
 }
 
 sourceSets {
