--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,12 @@
+plugins {
+    id 'me.champeau.gradle.jmh' version '0.2.0'
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
+
+apply plugin: 'me.champeau.gradle.jmh'
+
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
@@ -18,10 +25,16 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
+
 sourceSets {
     test{}
+}
+
+jmh {
+    jmhVersion = '1.3.2'
 }
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.4'
 }
+
