initial prototyping code to exercise sesame class tree

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
 group=com.marklogic
 version=0.0.1-SNAPSHOT
 
+mlHost=localhost
+mlUsername=admin
+mlPassword=admin
+mlAppName=quick-start
+mlRestPort=8200
