--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,24 @@
+buildscript {
+    repositories {
+        mavenCentral()
+        maven {url "http://developer.marklogic.com/maven2/"}
+        //maven {url "../../gh-pages-marklogic-java/releases"}
+        maven {url "http://rjrudin.github.io/marklogic-java/releases"}
+    }
+
+    dependencies { classpath "com.marklogic:ml-gradle:2.0a8" }
+}
+
+
 plugins {
     id 'me.champeau.gradle.jmh' version '0.2.0'
 }
 
+apply plugin: 'ml-gradle'
 apply plugin: 'java'
 apply plugin: 'eclipse'
 
 apply plugin: 'me.champeau.gradle.jmh'
-
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
