setup ml-gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,12 @@
 group=com.marklogic
 version=0.0.1-SNAPSHOT
 
+# test setup properties (ml-gradle)
 mlHost=localhost
 mlUsername=admin
 mlPassword=admin
 mlAppName=quick-start
 mlRestPort=8200
+scaffoldPath=src/ml-gradle
+mlConfigDir=src/ml-gradle/config
+mlModuleDir=src/ml-gradle/modules
