--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,17 @@
 group=com.marklogic
 version=0.0.1-SNAPSHOT
 
-# test setup properties (ml-gradle)
+mlConfigDir=src/ml-gradle/ml-config
 mlHost=localhost
 mlUsername=admin
 mlPassword=admin
-mlAppName=quick-start
+adminUser=admin
+adminPassword=admin
+writerUser=rest-writer
+writerPassword=x
+readerUser=rest-reader
+readerPassword=x
+validUser=rest-writer
+validPassword=x
+mlAppName=marklogic-sesame
 mlRestPort=8200
-scaffoldPath=src/ml-gradle
-mlConfigDir=src/ml-gradle/config
-mlModuleDir=src/ml-gradle/modules
