--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 group=com.marklogic
 version=0.0.1-SNAPSHOT
 
-mlConfigDir=src/ml-gradle/ml-config
+mlConfigDir=src/test/ml-config
 mlHost=localhost
 mlUsername=admin
 mlPassword=admin
-adminUser=admin
-adminPassword=admin
+mlAdminUsername=admin
+mlAdminPassword=admin
 writerUser=rest-writer
 writerPassword=x
 readerUser=rest-reader
 readerPassword=x
 validUser=rest-writer
 validPassword=x
-mlAppName=marklogic-sesame
+mlAppName=marklogic-sesame-test
 mlRestPort=8200
