--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ validUser=rest-writer
 validPassword=x
 mlAppName=marklogic-sesame-test
 mlRestPort=8200
+
+testData=src/test/resources/setup/test.owl
+testJHMData=
