--- a/marklogic-sesame/gradle.properties
+++ b/marklogic-sesame/gradle.properties
@@ -1,7 +1,9 @@
 group=com.marklogic
 version=1.0.0-SNAPSHOT
 
-mlConfigDir=src/test/ml-config
+# properties for test deployment
+mlAppName=marklogic-sesame-test
+mlRestPort=8200
 mlHost=localhost
 mlUsername=admin
 mlPassword=admin
@@ -13,8 +15,6 @@ readerUser=rest-reader
 readerPassword=x
 validUser=rest-writer
 validPassword=x
-mlAppName=marklogic-sesame-test
-mlRestPort=8200
-
+mlConfigDir=src/test/ml-config
 testData=src/test/resources/setup/test.owl
 testJHMData=
