--- a/marklogic-sesame/build.gradle
+++ b/marklogic-sesame/build.gradle
@@ -96,7 +96,7 @@ jmh {
     humanOutputFile = project.file("${project.buildDir}/reports/jmh/human.txt") // human-readable output file
     resultsFile = project.file("${project.buildDir}/reports/jmh/results.txt") // results file
     resultFormat = 'JSON' // Result format type (one of CSV, JSON, NONE, SCSV, TEXT)
-    timeUnit = 'ms' // Output time unit. Available time units are: [m, s, ms, us, ns].
+    //timeUnit = 'ms' // Output time unit. Available time units are: [m, s, ms, us, ns].
     verbosity = 'NORMAL' // Verbosity mode. Available modes are: [SILENT, NORMAL, EXTRA]
     warmup = '1s' // Time to spend at each warmup iteration.
     warmupBatchSize = 2 // Warmup batch size: number of benchmark method calls per operation.
