--- a/marklogic-sesame/gradle.properties
+++ b/marklogic-sesame/gradle.properties
@@ -5,16 +5,16 @@ version=1.0.0-SNAPSHOT
 mlAppName=marklogic-sesame-test
 mlRestPort=8200
 mlHost=localhost
-mlUsername=admin
-mlPassword=admin
 mlAdminUsername=admin
 mlAdminPassword=admin
-writerUser=rest-writer
+validUsername=admin
+validPassword=admin
+writerUser=s-rest-writer
 writerPassword=x
-readerUser=rest-reader
+readerUser=s-rest-reader
 readerPassword=x
-validUser=rest-writer
-validPassword=x
+invalidUser=s-invalid
+invalidPassword=x
 mlConfigDir=src/test/ml-config
 testData=src/test/resources/setup/test.owl
 testJHMData=
