--- a/marklogic-sesame/build.gradle
+++ b/marklogic-sesame/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         maven {url "http://rjrudin.github.io/marklogic-java/releases"}
     }
     dependencies {
-        classpath "com.marklogic:ml-gradle:2.0a15"
+        classpath "com.rjrudin:ml-gradle:2.0b3"
     }
 }
 
