Adding 'mlUsername' and 'mlPassword' to gradle.properties

--- a/marklogic-sesame/gradle.properties
+++ b/marklogic-sesame/gradle.properties
@@ -7,6 +7,8 @@ mlRestPort=8200
 mlHost=localhost
 mlAdminUsername=admin
 mlAdminPassword=admin
+mlUsername=admin
+mlPassword=admin
 validUsername=admin
 validPassword=admin
 writerUser=s-rest-writer
