moved jmh perf tests for issue #151

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'marklogic-sesame-parent'
 include ':marklogic-sesame'
 include ':marklogic-sesame-functionaltests'
 include ':marklogic-sesame-examples'
+include ':marklogic-sesame-performance'
