tidy up - added some basic examples

--- a/marklogic-sesame-examples/gradle.properties
+++ b/marklogic-sesame-examples/gradle.properties
@@ -1,14 +1,22 @@
 group=com.marklogic
-version=1.0-SNAPSHOT
+version=1.0.0-SNAPSHOT
 
-mlConfigDir=marklogic-sesame-examples/src/main/ml-config
+# properties for test deployment
+mlAppName=marklogic-sesame-test
+mlRestPort=8200
 mlHost=localhost
+mlAdminUsername=admin
+mlAdminPassword=admin
 mlUsername=admin
 mlPassword=admin
-writerUser=example-rest-writer
+validUsername=admin
+validPassword=admin
+writerUser=s-rest-writer
 writerPassword=x
-readerUser=example-rest-reader
+readerUser=s-rest-reader
 readerPassword=x
-mlAppName=marklogic-jena-examples
-mlRestPort=8928
-
+invalidUser=s-invalid
+invalidPassword=x
+mlConfigDir=marklogic-sesame/src/test/ml-config
+testData=src/test/resources/setup/test.owl
+testJHMData=
