--- a/marklogic-sesame-examples/build.gradle
+++ b/marklogic-sesame-examples/build.gradle
@@ -5,18 +5,18 @@ buildscript {
         maven {url "http://developer.marklogic.com/maven2/"}
         maven {url "http://rjrudin.github.io/marklogic-java/releases"}
     }
-    dependencies {
-        classpath "com.rjrudin:ml-gradle:2.0b5"
-    }
 }
 // this directive should be uncommented for development environments
 // otherwise the examples can run from centrally distributed marklogic-jena
 evaluationDependsOn(":marklogic-sesame")
 
-apply plugin: 'ml-gradle'
 apply plugin: 'eclipse'
 apply plugin: 'java'
 
+configure(allprojects){
+    ext.slf4jVersion = '1.7.2'
+    ext.logbackVersion = '1.0.9'
+}
 
 dependencies {
   compile('com.marklogic:marklogic-sesame:1.0.0-SNAPSHOT'){
@@ -25,6 +25,10 @@ dependencies {
       exclude(group: 'log4j')
       exclude(group: 'ch.qos.logback')
   }
+    compile('org.slf4j:slf4j-api:1.7.10')
+    compile "ch.qos.logback:logback-classic:$logbackVersion"
+    compile "org.slf4j:jcl-over-slf4j:$slf4jVersion"
+
 }
 
 sourceSets {
@@ -35,4 +39,19 @@ sourceSets {
   }
 }
 
+configurations {
+    compile {
+        description = 'compile classpath'
+        transitive = true
+    }
+    runtime {
+        extendsFrom compile
+    }
+}
+
 compileJava.dependsOn ":marklogic-sesame:install"
+
+task runSimple(type: JavaExec, dependsOn: 'classes') {
+    main = 'com.marklogic.semantics.sesame.examples.Simple'
+    classpath = sourceSets.main.runtimeClasspath
+}
