--- a/marklogic-sesame/gradle.properties
+++ b/marklogic-sesame/gradle.properties
@@ -1,5 +1,7 @@
 group=com.marklogic
-version=1.0.0-SNAPSHOT
+version=1.0.0
+
+publishUrl=file:../marklogic-java/releases
 
 # properties for test deployment
 mlAppName=marklogic-sesame-test
