--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,19 @@
 subprojects{
 
     apply plugin: 'java'
-
-    repositories {
+    apply plugin: 'jacoco'	
+    jacoco{toolVersion="0.7.4.201502262128"}
+    
+repositories {
         mavenCentral()
         mavenLocal()
     }
+
+jacocoTestReport {
+                    group = "Reporting"
+                    description = "Generate Jacoco coverage reports after running tests."
+                    additionalSourceDirs = files(sourceSets.main.allJava.srcDirs)
+                }
 
     sourceCompatibility = "1.7"
     targetCompatibility = "1.7"
