--- a/marklogic-sesame/build.gradle
+++ b/marklogic-sesame/build.gradle
@@ -33,7 +33,8 @@ repositories {
 dependencies {
     compile('org.openrdf.sesame:sesame-runtime:2.8.7')
 
-    compile('com.marklogic:java-client-api:3.0-SNAPSHOT') {
+    // for the bleeding edge switch to com.marklogic:java-client-api:4.0-SNAPSHOT
+    compile('com.marklogic:java-client-api:3.0.4') {
         exclude(group: 'org.slf4j')
         exclude(group: 'ch.qos.logback')
     }
