--- a/marklogic-sesame/build.gradle
+++ b/marklogic-sesame/build.gradle
@@ -17,6 +17,8 @@ apply plugin: 'java'
 apply plugin: 'maven-publish'
 apply plugin: 'maven'
 
+compileJava.options.encoding = 'UTF-8'
+
 configure(allprojects){
             ext.slf4jVersion = '1.7.2'
             ext.logbackVersion = '1.0.9'
