--- a/marklogic-sesame/build.gradle
+++ b/marklogic-sesame/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     compile('org.openrdf.sesame:sesame-runtime:2.8.10')
 
     // for the bleeding edge switch to com.marklogic:java-client-api:4.0-SNAPSHOT
-    compile('com.marklogic:java-client-api:3.0.+') {
+    compile('com.marklogic:java-client-api:3.0.5') {
         exclude(group: 'org.slf4j')
         exclude(group: 'ch.qos.logback')
     }
