--- a/marklogic-sesame/build.gradle
+++ b/marklogic-sesame/build.gradle
@@ -43,7 +43,7 @@ jacocoTestReport {
 dependencies {
     compile('org.openrdf.sesame:sesame-runtime:2.8.10')
 
-    // for the bleeding edge switch to com.marklogic:java-client-api:4.0-SNAPSHOT
+    // for the bleeding edge switch to com.marklogic:java-client-api:3.0.6
     compile('com.marklogic:java-client-api:3.0.+') {
         exclude(group: 'org.slf4j')
         exclude(group: 'ch.qos.logback')
