--- a/marklogic-sesame/build.gradle
+++ b/marklogic-sesame/build.gradle
@@ -43,6 +43,11 @@ jacocoTestReport {
 dependencies {
     compile('org.openrdf.sesame:sesame-runtime:2.8.10')
 
+//    compile('com.marklogic:java-client-api:3.0-SNAPSHOT') {
+//        exclude(group: 'org.slf4j')
+//        exclude(group: 'ch.qos.logback')
+//    }
+
     // for the bleeding edge switch to com.marklogic:java-client-api:4.0-SNAPSHOT
     compile('com.marklogic:java-client-api:3.0.+') {
         exclude(group: 'org.slf4j')
