--- a/marklogic-sesame/build.gradle
+++ b/marklogic-sesame/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 //    }
 
     // for the bleeding edge switch to com.marklogic:java-client-api:4.0-SNAPSHOT
-    compile('com.marklogic:java-client-api:3.0.+') {
+    compile('com.marklogic:java-client-api:3.0.6') {
         exclude(group: 'org.slf4j')
         exclude(group: 'ch.qos.logback')
     }
