--- a/marklogic-sesame-examples/build.gradle
+++ b/marklogic-sesame-examples/build.gradle
@@ -18,7 +18,7 @@ configure(allprojects){
 }
 
 dependencies {
-  compile('com.marklogic:marklogic-sesame:1.0.1.3-SNAPSHOT'){
+  compile('com.marklogic:marklogic-sesame:1.0.1.3'){
       changing=true
       exclude(group: 'org.slf4j')
       exclude(group: 'log4j')
